--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         		<div class="aboutWrapper col-xs-12 col-sm-6">
       				<img src="images/avatar.jpg" alt="">
               <div class="about-text">
-                <h3>I'm a Full Stack Javascript Developer</h3>
+                <h3>I am a Full Stack Javascript Developer</h3>
         				<p>I'm a Full Stack Developer with 2 years of experience in the MEAN Stack and data analytics. I have worked on creating and implementing databases for fortune 500 companies, scaled out backend infrastructure for corporate employees, designed, architected, and implemented from the ground up a sophisticated business databases for everyday use. </p>
         				<div class="social">
         					<ul>
