--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@
 	              </div>
 	              <input type="submit" id="submit" class="submit-style" name="submit" value="Send Message">
 	              <div class="submit-result">
-	                <p id="success">Your Message has been sent!</p>
+	                <p id="success">Your Message has been sesnt!</p>
 	                <p id="error">Something went wrong, go back and try again!</p>
 	              </div>
 	            </form>
