--- a/index.html
+++ b/index.html
@@ -513,8 +513,8 @@
   						<div class="image-hover">
                 <a class="lightbox" href="#popup-1">
                   <div>
-                    <h3>BlackJack App</h3>
-                    <span>Illustrator</span>
+                    <h3>CrowdGuru</h3>
+                    <span>Mentoring App</span>
                   </div>
                 </a>
   						</div>
@@ -523,7 +523,7 @@
   							<img src="images/blackjack.jpeg" alt="">
   							<div>
   								<h3>BlackJack App</h3>
-  								<p>This blackjack app is a fun game interactive with a player and dealer going heads up to see who will win!</p>
+  								<p>This app is a interactive platform for users and a guru to find the answers they need from the guru.</p>
   							</div>
   						</div>
   						<!-- end popup content -->
