--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
   						<div id="popup-1" class="mfp-hide popup-box">
   							<img src="images/blackjack.jpeg" alt="">
   							<div>
-  								<h3>BlackJack App</h3>
+  								<h3>Mentoring App</h3>
   								<p>This app is a interactive platform for users and a guru to find the answers they need from the guru.</p>
   							</div>
   						</div>
