--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Arnold Baghomian</title>
+    <title>Vince</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="images/favicon.png">
     <!-- ===== STYLESHEETS ===== -->
@@ -63,13 +63,13 @@
             <a href="#home">Home</a>
           </li>
           <li>
-            <a href="#about">About</a>
+            <a href="#about">about</a>
           </li>
           <li>
-            <a href="#blog">Blog</a>
+            <a href="#blog">Basketball News</a>
           </li>
            <li>
-            <a href="#resume">Resume</a>
+            <a href="#resume">Sports</a>
           </li>
           <li>
             <a href="#portfolio">Portfolio</a>
@@ -99,8 +99,8 @@
 	  	<div class="home-background parallax-section">
 	  		<div class="black-layer">
 		  		<div class="middle-content">
-		  			<h1>Arnold Baghomian</h1>
-		  			<span>Full Stack Javascript Developer</span>
+		  			<h1>Basketball</h1>
+		  			<span>Baller</span>
 		  		</div>
 		  		<div class="arrow-down">
 		  			<a href="#about">
